--- a/my-app/index.html
+++ b/my-app/index.html
@@ -1,6 +1,22 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Store",
+  "name": "NovaArcade",
+  "url": "https://novaarcade.store/",
+  "logo": "https://novaarcade.store/favicon.png",
+  "description": "NovaArcade is an elite gaming store offering premium accessories and hardware.",
+  "sameAs": [
+    "https://instagram.com/novaarcade",
+    "https://twitter.com/novaarcade",
+    "https://facebook.com/novaarcade"
+  ]
+}
+</script>
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,6 +25,48 @@
   href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@500;700&display=swap"
   rel="stylesheet"
 />
+  <meta
+    name="description"
+    content="Shop the best gaming accessories — keyboards, controllers, headsets, monitors & more. Level up your setup with NovaArcade gear built for pros."
+  />
+  <meta
+    name="keywords"
+    content="gaming gear, gaming store, RGB keyboard, gaming headset, pro controller, eSports accessories, NovaArcade"
+  />
+  <meta name="author" content="NovaArcade Team" />
+
+  <!-- ✅ Open Graph for Facebook / Discord -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://novaarcade.store/" />
+  <meta property="og:title" content="NovaArcade — Elite Gaming Gear" />
+  <meta
+    property="og:description"
+    content="Upgrade your gaming experience with premium accessories and equipment from NovaArcade."
+  />
+  <meta
+    property="og:image"
+    content="https://images.unsplash.com/photo-1660491083562-d91a64d6ea9c?auto=format&fit=crop&w=1200&q=80"
+  />
+
+  <!-- ✅ Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="NovaArcade — Elite Gaming Gear" />
+  <meta
+    name="twitter:description"
+    content="Explore high-performance gaming gear trusted by elite players worldwide."
+  />
+  <meta
+    name="twitter:image"
+    content="https://images.unsplash.com/photo-1747397454085-d6acb0502daf?auto=format&fit=crop&w=1200&q=80"
+  />
+
+  <!-- ✅ Theme color for mobile browsers -->
+  <meta name="theme-color" content="#b45309" />
+
+  <!-- ✅ Canonical URL -->
+  <link rel="canonical" href="https://novaarcade.store/" />
+
+
 
   </head>
   <body>
