--- a/my-app/index.html
+++ b/my-app/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NovaArcade — Elite Gaming Gear</title>
     <link rel="icon" href="/vite.svg" type="image/svg+xml" />
+    <a href="https://wa.me/254707556061" target="_blank" rel="noopener noreferrer">
+  Chat on WhatsApp
+</a>
+
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
