fixed html problem

--- a/my-app/index.html
+++ b/my-app/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NovaArcade — Elite Gaming Gear</title>
     <link rel="icon" href="/vite.svg" type="image/svg+xml" />
-    
-</a>
 
+    <!-- Removed invalid </a> tag -->
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -34,7 +33,6 @@
       href="https://images.unsplash.com/photo-1755589614356-bf6d276f5ca5?auto=format&fit=crop&w=800&q=80&fm=webp"
     />
 
-    <!-- Preload JS module for faster hydration -->
     <link rel="modulepreload" href="/src/main.jsx" />
 
     <!-- SEO -->
@@ -57,7 +55,6 @@
     <meta name="twitter:description" content="Explore high-performance gaming gear trusted by elite players worldwide." />
     <meta name="twitter:image" content="https://images.unsplash.com/photo-1747397454085-d6acb0502daf?auto=format&fit=crop&w=1200&q=80" />
 
-    <!-- Theme & PWA -->
     <meta name="theme-color" content="#b45309" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
